  * fix select folder (browseforfolder) not working in forms others than dom
  * fix don't allow CNAME + other record in DNS
  * fix added /run/alternc in open_basedir, fix ACTIONS not working
  * fix permission in browser not working
  * fix FTP access security UX
  * enh add DMARC and SPF management for gesmx & gesdns domains through variables

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Thu, 16 Jun 2015 16:10:12 +0200

alternc (3.1.6) oldstable; urgency=low

  * add SSL and API alternc packages (Beta)
  * fix french translation misunderstanding
  * fix translation not working for strings that disappeared in the past
  * fix browseForFolder not working on domaines_type having a - in their name
  * fix SSL url-ssl template missing

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Thu, 12 May 2015 17:37:12 +0200

alternc (3.1.5) oldstable; urgency=low

  * fix alias changes not working in some cases
  * fix ;;; END ALTERNC zones bug also for older versions
  * fix manage remote NFS-based quota when *explicitely* stated in local.sh (QUOTA_NFS=y)
  * fix duplicate variables may be inserted when installing a fresh AlternC

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Wed, 29 Apr 2015 15:30:01 +0200

alternc (3.1.4) oldstable; urgency=low

  * ensure that values in sub_domaines are prefixed by / for hosting subdomains
  * adding enable_original_recipient=no to postfix
  * adding tail log view + order by DATE last files in logs
  * fix ;;; END ALTERNC zones bug
  * proposal (not enabled by default) of error.log per vhost
  * default message size limit to 100M, no mailbox size limit in postfix
  * fix removal of awstats-package crontab in favor of AlternC's one
  * fix unzip/untar/ungzip of files from the browser (double escapeshellarg)
  * fix catchall management (bugguy & crappy error messages)
  * fix #1646 transport sql is not using indexes

 -- Benjamin Sonntag <benjamin@sonntag.fr>  Mon, 20 Apr 2015 18:00:12 +0200

alternc (3.1.3) oldstable; urgency=low
